# validating-path-simplification

./: LICENSE  README.md  pyproject.toml
examples/: generate_and_visualize.py
src/validating_path_simplification/: path_tools.py
tests/: test_path_tools.py
